--- a/assets/style.css
+++ b/assets/style.css
@@ -16,16 +16,21 @@ body {
 
 .cartao {
     margin: 1rem 1rem;
+    
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
+    background-color: var(--card-front-color);
     text-align: center;
     height: 100%;
-    background-color: var(--card-front-color);
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
+
+
 
 
 
@@ -38,7 +43,9 @@ body {
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
+
 
 .cartao__conteudo p {
     margin-top: 1rem;
@@ -52,13 +59,6 @@ body {
     color: var(--card-back-color);
     font-weight: 700;
 }
-
-
-
-
-
-
-
 footer {
     background-color: black;
     color: white;
@@ -72,4 +72,22 @@ footer p {
     text-align: center;
     font-size: 0.6rem;
     margin-top: 0.5rem;
+}
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
+}
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
 }
