--- a/assets/style.css
+++ b/assets/style.css
@@ -83,8 +83,10 @@ footer p {
     height: 100%;
     width: 100%;
 }
-.cartao__conteudo__resposta {
+.cartao__conteudo__resposta{
     transform: rotateY(180deg);
+    background-color: rgba(0, 244, 191, 0.2);
+    border: 4px solid var(--card-back-color);
 }
 .cartao__conteudo p {
     margin-top: 1rem;
