--- a/assets/style.css
+++ b/assets/style.css
@@ -82,6 +82,7 @@ footer p {
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 .cartao__conteudo__resposta{
     transform: rotateY(180deg);
@@ -92,6 +93,7 @@ footer p {
     margin-top: 1rem;
     padding: 2rem;
     margin-top: 4rem;
+    font-size: 1.4vw;
 }
 #container {
     display: flex;
