--- a/assets/style.css
+++ b/assets/style.css
@@ -103,3 +103,18 @@ footer p {
      gap: 3rem;
 }
 
+@media (max-width: 560 px) {
+
+    body {
+        background: url('img/bd-mobile.webp');
+    }
+    .cartao {
+        flex: 1 0 calc(100% - 1rem);
+    }
+    .cartao__conteudo h3 {
+        font-size: 3vw;
+    }
+    .cartao__conteudo p {
+        font-size: 3.8vw;
+    }
+}
